fix/styles: filters alignment

--- a/styles/_filter.scss
+++ b/styles/_filter.scss
@@ -5,6 +5,7 @@
   &__top {
     width: 100%;
     margin-bottom: 15px;
+    height: 33px;
 
     h5 {
       font-size: $tp-lg;
